--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,152 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
   box-sizing: border-box;
+  font-family:sans-serif;
+}
+header {
+  position: sticky;
+  position: -webkit-sticky;
+  border:1px solid blue;
+  top:0;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 30px;
+  align-items: center;
+  background: white;
+}
+header nav ul {
+  gap:40px;
+  align-items: center;
   padding: 0;
   margin: 0;
 }
+header nav ul li {
+  padding: 9px 0px;
+}
+header nav ul li:first-child {
+  font-weight: bold;
+  font-size: 19px;
+}
+header .icons i {
+  font-size: 25px;
+}
+header .icons {
+  display: flex;
+  gap:25px;
+}
+header nav ul li:nth-child(2) span {
+  position: absolute;
+  width: 100%;
+  left:0;
+  top:48px;
+  background: red;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+header nav ul li:nth-child(2):hover span {
+  transform: scaleY(1);
+}
+header nav ul li:nth-child(3) span {
+  position: absolute;
+  width: 100%;
+  left:0;
+  top:48px;
+  background: red;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.1s;
+  z-index: 10;
+}
+header nav ul li:nth-child(3):hover span {
+  transform: scaleY(1);
+}
+header nav ul li:nth-child(4) span {
+  position: absolute;
+  width: 100%;
+  left:0;
+  top:48px;
+  background: red;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.1s;
+}
+header nav ul li:nth-child(4):hover span {
+  transform: scaleY(1);
+}
+.menubtn {
+  display: none;
+  font-size: 23px;
+}
+.banner {
+  position: relative;
+  z-index: -1;
+}
+.banner .bannercontent {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.banner .bannercontent h1 {
+  font-size: 75px;
+  color:black;
+  font-weight: 600;
+  letter-spacing: -3px;
+}
+.banner .bannercontent h2 {
+  font-size: 32px;
+  margin-top: -5px;
+  
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+}
+.banner .bannercontent .buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:23px;
+  padding-top: 20px;
+}
+.banner .bannercontent .buttons div {
+  border:2px solid black;
+  background-color: black;
+  color:white;
+  padding: 8px 50px;
+  font-size: 18px;
+  font-weight: 300;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.offers {
+
+  color:white;
+  background: black;
+  display: flex;
+  gap:40px
+}
+.offers > div:first-child {
+  padding: 5px;
+  display: flex;
+  gap:40px;
+  width: 50%;
+  justify-content: end;
+}
+.offers > div:last-child {
+  padding: 5px;
+  display: flex;
+  gap:40px;
+  width: 50%;
+  justify-content: start;
+}
+.offers img {
+  height: 20px;
+  width: 20px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+
+
+
+
