--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,8 @@ header nav ul li:nth-child(4):hover span {
   color:white;
   background: black;
   display: flex;
-  gap:40px
+  gap:40px;
+  
 }
 .offers > div:first-child {
   padding: 5px;
