--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,41 +41,49 @@ header nav ul li:nth-child(2) span {
   position: absolute;
   width: 100%;
   left:0;
-  top:48px;
-  background: red;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 0.3s;
+  top:45px;
+  opacity: 0;
+  visibility: hidden;
+
 }
 header nav ul li:nth-child(2):hover span {
-  transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
+  border:1px solid blue;
+  transition: 0.3s;
+
+  
 }
 header nav ul li:nth-child(3) span {
   position: absolute;
   width: 100%;
   left:0;
-  top:48px;
-  background: red;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 0.1s;
+  top:45px;
+  opacity: 0;
+  visibility: hidden;
   z-index: 10;
 }
 header nav ul li:nth-child(3):hover span {
-  transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+
 }
 header nav ul li:nth-child(4) span {
   position: absolute;
   width: 100%;
   left:0;
-  top:48px;
-  background: red;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 0.1s;
+  top:45px;
+  opacity: 0;
+  visibility: hidden;
+
+
 }
 header nav ul li:nth-child(4):hover span {
-  transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+
 }
 .menubtn {
   display: none;
@@ -158,24 +166,124 @@ header nav ul li:nth-child(4):hover span {
 .sliderhaader {
   display: flex;
   justify-content: space-between;
-  padding-top: 80px;
+  margin-top: 80px;
   padding-left: 30px;
   padding-right: 30px;
   align-items: center;
 }
 .sliderhaader h1 {
-  font-size: 36px;
+  font-size: 38px;
+  color:#000000;
+  padding-bottom: 35px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 .sliderhaader > div div {
   align-items: center;
   font-size: 24px;
-  color:black
+  color:black;
+}
+
+figure .sizebar {
+  position: absolute;
+  width:100%;
+  left:50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  padding: 10px;
+}
+figure .sizebar h4 {
+  background: white;
+  color:black;
+  width: 100%;
+  text-align: center;
+  padding: 6px 10px;
+  font-size: 20px;
+  display: none;
+
 }
 
 
 
 
 
+/* The content inside when we hover the first li */
+.lionehover::-webkit-scrollbar {
+  display: none;
+}
+.lionehover {
+  display: grid;
+  grid-template-columns: 47% 53%;
+  background: #F9F9F9;
+}
+
+.lionehover > div:nth-child(1) {
+  padding: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap:20px
+}
+
+.lionehover > div:nth-child(1) ul li {
+  line-height: 10px;
+  font-size: 14px;
+}
+.lionehover > div:nth-child(2) {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  padding: 30px;
+  gap:20px
+  
+}
+
+
+/* slick slider css //////////////////////////////////////////////// */
+
+.slick-slider{
+  width: 100%;
+  overflow: hidden;
+  padding: 0 20px;
+  cursor: pointer;
+  background: white;
+}
+.slidercaption {
+  font-size: 13px;
+  font-weight: 600
+}
+.sliderprice {
+  font-size: 13px;
+}
+.slideritem figure img:nth-child(2) {
+  display: none;
+}
+.slideritem figure:hover img:nth-child(2) {
+  display: block;
+}
+.slideritem figure:hover img:nth-child(1) {
+  display: none;
+}
+
+.section-b {
+  padding: 50px 0px;
+  border:3px solid red;
+}
+.section-b h1 {
+  font-size: 35px;
+  font-weight:500;
+  padding-bottom: 40px;
+}
+
+
+
+/* figure:hover .sizebar h4 {
+  display: block;
+} */
+.slideritem:hover figure .sizebar h4 {
+  display: block;
+}
 
 
 
