--- a/src/app/media.css
+++ b/src/app/media.css
@@ -78,6 +78,9 @@
     .offers {
         padding: 7px 10px;
     }
+    .slick-slider {
+        padding: 0px 10px;
+    }
  
 
 }
@@ -88,9 +91,6 @@
     header nav ul li:first-child {
         font-size: 17px;
         font-weight: 700;
-
-
-
     }
     .banner .bannercontent h1 {
         font-size: 45px;
@@ -117,6 +117,9 @@
     }
     .offers {
         padding: 7px 10px;
+    }
+    .slick-slider {
+        padding: 0px 5px;
     }
   
    
